# Kurralv3

./: .gitignore  139dcbb1-bed4-42ee-a6fc-eac96ba9851e.kurral  GETTING_STARTED.md  MCP_SECURITY_ROADMAP.md  MERGE_TO_MAIN.md  POC-PROGRESS.md  README.md  REPLAY_DEEP_DIVE.md  REPOSITORY_DOCUMENTATION.md  pyproject.toml  test_agent.py  test_sse_manual.py
ABTester/: README.md  REPLAY_GUIDE.md  __init__.py  agent_decorator.py  agent_replay.py  ars_scorer.py  artifact_generator.py  artifact_manager.py  config.py  decorator.py  langchain_integration.py  pyproject.toml  replay.py  replay_detector.py  replay_executor.py  requirements-dev.txt  side_effect_config.py  tool_stubber.py
ABTester/cli/: agent_replay.py  replay_cmd.py
ABTester/database/: __init__.py  connection.py  metadata_service.py
ABTester/storage/: __init__.py  local_storage.py  r2_storage.py  storage_backend.py
ABTester/tests/: conftest.py  test_artifact_manager.py  test_replay_detector.py
Kurral_tester/: .gitignore  README.md  REPLAY_GUIDE.md  __init__.py  agent_decorator.py  agent_replay.py  ars_scorer.py  artifact_generator.py  artifact_manager.py  config.py  decorator.py  kurral_replay.py  langchain_integration.py  pyproject.toml  replay.py  replay_detector.py  replay_executor.py  requirements.txt  side_effect_config.py  tool_stubber.py  write_side_effect_interceptor.py
Kurral_tester/cli/: __init__.py  agent_replay.py  replay_cli.py  replay_cmd.py
Kurral_tester/database/: __init__.py  connection.py  metadata_service.py
Kurral_tester/models/: kurral.py
Kurral_tester/storage/: __init__.py  local_storage.py  r2_storage.py  storage_backend.py
Kurral_tester/tests/: conftest.py  test_artifact_manager.py  test_replay_detector.py
dashboard/: ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
docs/: ENV_TEMPLATE.md  MCP_PROXY.md  MCP_SECURITY_VISION.md  REPLAY_DEEP_DIVE.md  USE_CASES.md
examples/: README.md  quickstart_agent.py
examples/code-review/: README.md
examples/customer-support/: .env.example  README.md  agent.py  requirements.txt
examples/langgraph_poc/: README.md  simple_graph.py
examples/mcp_test/: README.md  kurral-mcp.yaml  mock_mcp_server.py  run_integration_test.sh  test_client.py
examples/research-assistant/: README.md
kurral/: README.md  REPLAY_GUIDE.md  __init__.py  langgraph_integration.py  replay.py
kurral-api-main/: .env.template  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  main.py  requirements.txt  run.sh  start.sh
kurral-api-main/app/: __init__.py
kurral-cli-main/kurral-cli-main/: .env.example  .gitignore  .pypirc.template  CHANGELOG.md  CONTRIBUTING.md  ENV_CONFIG.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  QUICK_START.md  README.md  docker-compose.yml  env.template  pyproject.toml  setup.py
kurral-cli-main/kurral-cli-main/examples/: ab_test_example.py  backtest_example.py  basic_usage.py  manual_artifact_creation.py  replay_example.py
kurral-cli-main/kurral-cli-main/kurral/: __init__.py
kurral-cli-main/kurral-cli-main/kurral/api/: __init__.py
kurral-cli-main/kurral-cli-main/kurral/cli/: __init__.py  ab_test.py  auth.py  backtest.py  buckets.py  config_cmd.py  export.py  main.py  memory.py  replay.py  upload_simple.py
kurral-cli-main/kurral-cli-main/kurral/core/: __init__.py  ab_test.py  ars.py  artifact.py  backtest.py  config.py  decorator.py  determinism.py  replay.py
kurral-cli-main/kurral-cli-main/kurral/integrations/: __init__.py  langgraph_callback.py  langsmith.py
kurral-cli-main/kurral-cli-main/kurral/models/: __init__.py  kurral.py  langsmith.py
kurral-cli-main/kurral-cli-main/kurral/storage/: __init__.py  api.py  cache.py  memory.py  postgres.py  r2.py
kurral-cli-main/kurral-cli-main/scripts/: README.md  pre-release-check.sh  release.sh
kurral-cli-main/kurral-cli-main/tests/: __init__.py  test_artifact.py  test_determinism.py  test_replay.py
kurral.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kurral/cli/: __init__.py  replay_cmd.py
kurral/mcp/: README.md  SSE_IMPLEMENTATION.md  capture.py  models.py
kurral/quickstart/: generator.py
kurral/storage/: README-API  README-API.md
kurralv3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
level1agent/: agent.py  tools.py
level1agentK/: agent.py
level1agentK/artifacts/: 11a6a4bd-30c5-44f6-8037-48f8e5426e3b.kurral  19edd292-c1ac-4d8c-9fc4-8c39ebf3db72.kurral  2962b521-6a17-46f7-bdfc-24bb6346e629.kurral  3f578c34-6885-4d98-aa24-eda6f0bdab54.kurral  8a0aaee1-5c03-4f1a-b39e-f693d550387b.kurral  8d996d2a-5401-4730-801d-a3e32f043cf8.kurral  a9ae12b5-9ad6-493a-b11a-bc9da402ffba.kurral  c13cb8dd-0b75-47b1-bb70-8b926c077340.kurral  c60768e2-aa59-4a01-becc-5d35b0e2233e.kurral  ddb277dd-be31-4349-89bd-294aded7d839.kurral  index.json
level1agentK/replay_runs/: 0ce635f3-e6d3-4a08-b3b7-f6484ad770bc.kurral  13fa2882-f1ab-4b54-a38b-af35ce3b8c00.kurral  4944b90b-9678-4589-b915-c14a950edb96.kurral  4a81c630-24c5-4661-9f55-0306c01da1ef.kurral  6fe14af8-8092-4539-8964-170c8c505ae6.kurral  95f9f7d1-b8c8-49fe-a120-7ccb35cc8e64.kurral  abcd2b0e-c066-4da0-9327-0edaae8a1ff9.kurral  index.json  (+6 more)
level2agentK/: agent.py
level3agent/: __init__.py  agent.py  send_email.py
level3agentK/: .env.example  agent.py  send_email.py
(+142 files in other folders)
