[project]
name = "kurralv3"
version = "0.1.0"
description = "Multi-level AI agents system"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-google-genai>=0.0.6",
    "langchain-community>=0.0.20",
    "chromadb>=0.4.0",
    "pypdf>=3.17.0",
    "tavily-python>=0.3.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["level1agent", "level2agent", "level3agent"]

